# Pokedle

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  pokedle_back.py
.github/workflows/: push-to-docker.yaml
pokedle/: Cargo.toml
pokedle/src/: lib.rs  pokemon.rs
pokedle_python/: cargo.toml
pokedle_python/src/: lib.rs
public/: index.html  main.js  style.css
small_test_data/generated_data/de/: metadata.json
small_test_data/generated_data/fr/: metadata.json
src/: lib.rs  pokemon.rs
