[package]
name = "pokedle"
version = "0.1.0"
edition = "2021"
authors = ["Baduit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
chrono = "0.4.31"