[package]
name = "pokedle"
version = "0.1.0"
edition = "2021"
authors = ["Baduit"]

[lib]
name = "pokedle"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
chrono = "0.4.31"
pyo3 = { version = "0.20.0", features = ["extension-module"] }